--- a/tiny_mrp/mrp/templates/mrp/tolid/partial_daily_details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partial_daily_details_aria.html
@@ -17,6 +17,7 @@
               <tr>
                 <th>نام ماشین</th>
                 <th>واحد</th>
+                <th>نام اپراتور</th>
 
                 <th>نمره</th>
                 <th>سرعت</th>
