--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -21,6 +21,7 @@
 
 <link rel="stylesheet" href="{%  static 'vendors/datepicker/daterangepicker.css' %}">
 <link rel="stylesheet" href="{%  static 'assets/Datepiker/persian-datepicker.css' %}">
+
 {% block stylesheet %}
 {% endblock %}
 
@@ -193,6 +194,7 @@
 <script src="{% static 'assets/Datepiker/persian-date.js' %}"></script>
 <script src="{% static 'assets/Datepiker/persian-datepicker.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
 
