--- a/tiny_mrp/mrp/templates/mrp/formula/formulaList.html
+++ b/tiny_mrp/mrp/templates/mrp/formula/formulaList.html
@@ -9,26 +9,78 @@
             <div class="card-body">
                 <h6 class="card-title">{{title}}</h6>
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered" id="company-table">
                         <thead>
                         <tr class="bg-info">
                         <th>نام ماشین</th>
                         <th>فرمول</th>
+                        <th>عملیات</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tbody_company">
                           {% include 'mrp/formula/partialFormulaList.html' %}
 
                           </tbody>
                     </table>
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            {% if formulas.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ formulas.previous_page_number }}" aria-label="Previous">
+                                        <span aria-hidden="true">قبلی</span>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">قبلی</a>
+                                </li>
+                            {% endif %}
+                    
+                            {% for num in formulas.paginator.page_range %}
+                                {% if formulas.number == num %}
+                                    <li class="page-item active" aria-current="page">
+                                        <a class="page-link" href="#">{{ num }} <span class="sr-only">(فعلی)</span></a>
+                                    </li>
+                                {% elif num > formulas.number|add:'-3' and num < formulas.number|add:'3' %}
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                    
+                            {% if formulas.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ formulas.next_page_number }}" aria-label="Next">
+                                        <span aria-hidden="true">بعدی</span>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">بعدی</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
                 </div>
 
             </div>
         </div>
+        <div class="modal fade" id="modal-company">
+            <div class="modal-dialog  modal-lg ">
+   
+              <div class="modal-content ">
+              </div>
+            </div>
+           </div>
 
 
 
     </div>
 </div>
+
+{% endblock %}
+{% load static %}
+{% block javascript %}
+<script src="{% static 'project/formula.js' %}"></script>
 
 {% endblock %}
