--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -282,6 +282,7 @@
                                           <th>کنتور انتهای شیفت</th>
                                           <th>100%</th>
                                           <th>تولید</th>
+                                          <th>ضایعات</th>
                                           <th>عملیات</th> 
                                       </tr>
                                   </thead>
@@ -322,6 +323,7 @@
                                           <td contenteditable="true" class="editable-cell btc counter2 selectable1"></td>
                                           <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}">{{c.max}}</td>
                                           <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
+                                          <td contenteditable="true" class="editable-cell2 selectable1 wastage"> </td>
                                           <td>
                                             <button class="btn btn-success copy-row">کپی</button> <!-- Copy button -->
                                         </td>
